Prep for release

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -151,6 +151,13 @@ fi
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Wed Mar 24 2010 Cole Robinson <crobinso@redhat.com> - 0.8.4-1
+- 'Import' install option, to create a VM around an existing OS image
+- Support multiple boot devices and boot order
+- Watchdog device support
+- Enable setting a human readable VM description.
+- Option to manually specifying a bridge name, if bridge isn't detected
+
 * Mon Feb  8 2010 Cole Robinson <crobinso@redhat.com> - 0.8.3-1
 - Manage network interfaces: start, stop, view, provision bridges, bonds, etc.
 - Option to 'customize VM before install'.
