Small spec file fix

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -138,7 +138,7 @@ fi
 %dir %{_datadir}/%{name}/pixmaps/hicolor/
 %dir %{_datadir}/%{name}/pixmaps/hicolor/*/
 %dir %{_datadir}/%{name}/pixmaps/hicolor/*/*/
-%dir %{_datadir}/%{name}/pixmaps/hicolor/*/*/*.png
+%{_datadir}/%{name}/pixmaps/hicolor/*/*/*.png
 
 %dir %{_datadir}/%{name}/virtManager/
 
