Don't throw odd traceback on app close from thread cleanup issues.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -169,6 +169,8 @@ def setup_logging(debug_stdout):
 
     # Log uncaught exceptions
     def exception_log(typ, val, tb):
+        if not traceback:
+            return
         s = traceback.format_exception(typ, val, tb)
         logging.exception("".join(s))
         sys.__excepthook__(typ, val, tb)
