--- a/.hgignore
+++ b/.hgignore
@@ -1,3 +1,4 @@
+syntax: regexp
 ^.*~$
 ^build
 Makefile\.in$
@@ -41,6 +42,8 @@ po/remove-potcdate\.sin
 ^.*\.so
 ^.*\.a
 ^.*\.swp
+
+syntax: glob
 Makefile
 src/virt-manager
 src/virt-manager.desktop
