.hgignore: Fix recent changes to ignore virt-manager-launch

--- a/.hgignore
+++ b/.hgignore
@@ -46,6 +46,7 @@ po/remove-potcdate\.sin
 syntax: glob
 Makefile
 src/virt-manager
+src/virt-manager-launch
 src/virt-manager.desktop
 src/virt-manager.py
 src/virt-manager.service
