Prep for release

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -154,6 +154,11 @@ fi
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Tue Aug 24 2010 Cole Robinson <crobinso@redhat.com> - 0.8.5-1
+- Improved save/restore support
+- Option to view and change disk cache mode
+- Configurable VNC keygrab sequence (Michal Novotny)
+
 * Wed Mar 24 2010 Cole Robinson <crobinso@redhat.com> - 0.8.4-1
 - 'Import' install option, to create a VM around an existing OS image
 - Support multiple boot devices and boot order
