Added a startup script for virt-manager-tui, similar to virt-manager.
It checks the environment, ensures the right version of virtinst is
present before invoking the main menu for the TUI.

--- a/.hgignore
+++ b/.hgignore
@@ -46,6 +46,8 @@ po/remove-potcdate\.sin
 syntax: glob
 Makefile
 src/virt-manager
+src/virt-manager-tui
+src/virt-manager-tui.py
 src/virt-manager-launch
 src/virt-manager.desktop
 src/virt-manager.py
