--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -211,55 +211,85 @@ def parse_commandline():
 
     return optParser.parse_args()
 
+
 def launch_specific_window(engine, show, uri, uuid):
-    if not engine.wait_for_open(uri):
-        # Connection failed, don't attempt to continue
+    logging.debug("Launching requested window '%s'" % show)
+    if show == 'creator':
+        engine.show_domain_creator(uri)
+    elif show == 'editor':
+        engine.show_domain_editor(uri, uuid)
+    elif show == 'performance':
+        engine.show_domain_performance(uri, uuid)
+    elif show == 'console':
+        engine.show_domain_console(uri, uuid)
+    elif show == 'summary':
+        engine.show_host_summary(uri)
+
+def _conn_state_changed(conn, engine, show, uri, uuid):
+    if conn.state == conn.STATE_DISCONNECTED:
+        return True
+    if conn.state != conn.STATE_ACTIVE:
         return
-    if show=='creator':
-        engine.show_create(uri)
-    elif show=='editor':
-        engine.show_details_config(uri, uuid)
-    elif show=='performance':
-        engine.show_details_performance(uri, uuid)
-    elif show=='console':
-        engine.show_console(uri, uuid)
+
+    launch_specific_window(engine, show, uri, uuid)
+    return True
 
 # maps --show-* to engine (ie local instance) methods
 def show_engine(engine, show, uri, uuid, no_conn_auto):
-    if show=='creator' or show=='editor' \
-       or show=='performance' or show=='console':
-        # Create a thread so we can wait for connection to _fully_ start,
-        # to prevent races accessing uninit'd vars for ex. the create wizard
-        # which expects the connection to be active.
-        thread = threading.Thread(target=launch_specific_window,
-                                  args=(engine, show, uri, uuid),
-                                  name="Launching '%s' window" % show)
-        thread.start()
+    conn = None
 
-    elif show=='summary' or uri:
+    # Do this regardless
+    engine.show_manager()
+
+    if uri:
+        conn = engine.add_connection(uri)
+
+        if conn and show:
+            import virtManager.util as util
+            util.connect_opt_out(conn, "state-changed",
+                                 _conn_state_changed,
+                                 engine, show, uri, uuid)
+
         engine.connect_to_uri(uri)
-    else:
-        engine.show_manager()
 
     if not no_conn_auto:
         engine.autostart_connections()
 
-
 # maps --show-* to remote manager (ie dbus call) methods
 def show_remote(managerObj, show, uri, uuid):
-    if show=='creator' or show=='editor' \
-       or show=='performance' or show=='console':
-        # Create a thread so we can wait for connection to _fully_ start,
-        # to prevent races accessing uninit'd vars for ex. the create wizard
-        # which expects the connection to be active.
-        thread = threading.Thread(target=launch_specific_window,
-                                  args=(managerObj, show, uri, uuid),
-                                  name="Launching '%s' window" % show)
-        thread.start()
-    elif show=='summary' or uri:
-        managerObj.show_host_summary(uri)
+    # Do this regardless
+    managerObj.show_manager()
+
+    if show or uri or uuid:
+        launch_specific_window(managerObj, show, uri, uuid)
+
+def dbus_config(engine):
+    """
+    Setup dbus interface
+    """
+    import dbus
+    from virtManager.remote import vmmRemote
+    bus = None
+
+    if os.getenv("DBUS_STARTER_ADDRESS") is None:
+        bus = dbus.SessionBus()
     else:
-        managerObj.show_manager()
+        bus = dbus.StarterBus()
+
+    dbusProxy = bus.get_object("org.freedesktop.DBus", "/org/freedesktop/DBus")
+    dbusObj = dbus.Interface(dbusProxy, "org.freedesktop.DBus")
+
+    if dbusObj.NameHasOwner("com.redhat.virt.manager"):
+        # We're already running, so just talk to existing process
+        managerProxy = bus.get_object("com.redhat.virt.manager",
+                                      "/com/redhat/virt/manager")
+        managerObj = dbus.Interface(managerProxy, "com.redhat.virt.manager")
+        return managerObj
+
+    else:
+        # Grab the service to allow others to talk to us later
+        name = dbus.service.BusName("com.redhat.virt.manager", bus=bus)
+        vmmRemote(engine, name)
 
 # Generic OptionParser callback for all --show-* options
 # This routine stores UUID to options.uuid for all --show-* options
@@ -352,12 +382,11 @@ def main():
         signal.signal(signal.SIGHUP, signal.SIG_IGN)
 
     from virtManager.engine import vmmEngine
-    from virtManager.remote import vmmRemote
 
     gtk.window_set_default_icon_from_file(icon_dir + "/" +
                                           appname + "-icon.svg")
 
-    if options.show and options.uri==None:
+    if options.show and options.uri == None:
         raise OptionValueError("can't use --show-* options without --connect")
 
     engine = vmmEngine(config)
@@ -367,42 +396,18 @@ def main():
              (os.getenv("DBUS_STARTER_ADDRESS") is None))):
 
         try:
-            bus = None
-            if os.getenv("DBUS_STARTER_ADDRESS") is None:
-                bus = dbus.SessionBus()
-            else:
-                bus = dbus.StarterBus()
-
-            dbusProxy = bus.get_object("org.freedesktop.DBus",
-                                       "/org/freedesktop/DBus")
-            dbusObj = dbus.Interface(dbusProxy, "org.freedesktop.DBus")
-
-            if dbusObj.NameHasOwner("com.redhat.virt.manager"):
-                # We're already running, so just talk to existing process
-
-                managerProxy = bus.get_object("com.redhat.virt.manager",
-                                              "/com/redhat/virt/manager")
-                managerObj = dbus.Interface(managerProxy,
-                                            "com.redhat.virt.manager")
-
-                show_remote(managerObj, options.show,
-                            options.uri, options.uuid)
-
+            managerObj = dbus_config(engine)
+            if managerObj:
                 # yes, we exit completely now - remote service is in charge
                 logging.debug("Connected to already running instance.")
+                show_remote(managerObj, options.show,
+                            options.uri, options.uuid)
                 return
-
-            else:
-                # Grab the service to allow others to talk to us later
-                name = dbus.service.BusName("com.redhat.virt.manager", bus=bus)
-                vmmRemote(engine, name)
-
         except:
             # Something went wrong doing dbus setup, just ignore & carry on
-            logging.warning("Could not get connection to session bus, "
-                            "disabling DBus service " +
-                            str(sys.exc_info()[0]) + " " +
-                            str(sys.exc_info()[1]))
+            logging.exception("Could not get connection to session bus, "
+                              "disabling DBus service")
+
 
     # At this point we're either starting a brand new controlling instance,
     # or the dbus comms to existing instance has failed
