--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -59,9 +59,8 @@ data_dir = "::DATADIR::"
 logging_setup = False
 
 def _show_startup_error(msg, details):
-    import gtk
     from virtManager.error import vmmErrorDialog
-    err = vmmErrorDialog(None, 0, gtk.MESSAGE_ERROR, gtk.BUTTONS_CLOSE, "", "")
+    err = vmmErrorDialog()
     title = _("Error starting Virtual Machine Manager")
     err.show_err(title + ": " +  msg, details, title, async=False,
                  debug=False)
