--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -371,9 +371,11 @@ def main():
     # Specifically init config/gconf before the fork, so that pam
     # doesn't think we closed the app, therefor robbing us of
     # display access
-    from virtManager.config import vmmConfig
-    config = vmmConfig(appname, appversion, gconf_dir, glade_dir,
-                       icon_dir, data_dir)
+    import virtManager.config
+    config = virtManager.config.vmmConfig(appname, appversion,
+                                          gconf_dir, glade_dir,
+                                          icon_dir, data_dir)
+    virtManager.config.running_config = config
 
     # Now we've got basic environment up & running we can fork
     if not options.nofork and not options.debug:
