configure: Add option to disable unsupported RHEL config

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,6 +61,7 @@ endif
 	  -e "s,::PYARCHLIBDIR::,$(pkglibdir)," \
 	  -e "s,::VIRTINST_VERSION::,$(VIRTINST_VERSION)," \
 	  -e "s,::DEFAULT_QEMU_USER::,$(DEFAULT_QEMU_USER)," \
+	  -e "s,::ENABLE_UNSUPPORTED_RHEL_OPTS::,$(ENABLE_UNSUPPORTED_RHEL_OPTS)," \
 	  < $< > $@
 
 $(PACKAGE): $(srcdir)/$(PACKAGE).in
