--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -58,6 +58,7 @@ data_dir = "::DATADIR::"
 
 default_qemu_user = "::DEFAULT_QEMU_USER::"
 rhel_enable_unsupported_opts = bool(int("::ENABLE_UNSUPPORTED_RHEL_OPTS::"))
+preferred_distros = [d for d in "::PREFERRED_DISTROS::".split(",") if d]
 
 logging_setup = False
 
@@ -381,6 +382,7 @@ def main():
     virtManager.config.running_config = config
     config.default_qemu_user = default_qemu_user
     config.enable_unsupported_rhel_opts = rhel_enable_unsupported_opts
+    config.preferred_distros = preferred_distros
 
     # Now we've got basic environment up & running we can fork
     if not options.nofork and not options.debug:
