--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -40,6 +40,9 @@ try:
 except:
     pass
 
+def split_list(commastr):
+    return [d for d in commastr.split(",") if d]
+
 # These are substituted into code based on --prefix given to configure
 appname = "::PACKAGE::"
 appversion = "::VERSION::"
@@ -58,7 +61,10 @@ data_dir = "::DATADIR::"
 
 default_qemu_user = "::DEFAULT_QEMU_USER::"
 rhel_enable_unsupported_opts = bool(int("::ENABLE_UNSUPPORTED_RHEL_OPTS::"))
-preferred_distros = [d for d in "::PREFERRED_DISTROS::".split(",") if d]
+preferred_distros = split_list("::PREFERRED_DISTROS::")
+
+hv_packages = split_list("::HV_PACKAGES::")
+libvirt_packages = split_list("::LIBVIRT_PACKAGES::")
 
 logging_setup = False
 
@@ -386,6 +392,9 @@ def main():
     config.default_qemu_user = default_qemu_user
     config.enable_unsupported_rhel_opts = rhel_enable_unsupported_opts
     config.preferred_distros = preferred_distros
+
+    config.hv_packages = hv_packages
+    config.libvirt_packages = libvirt_packages
 
     # Now we've got basic environment up & running we can fork
     if not options.nofork and not options.debug:
