Fix VPATH builds wrt PNG files in dist
The wildcard glob for adding PNG files to the dist did
not specify a directory, so it matched against builddir
rather then srcdir

--- a/pixmaps/hicolor/24x24/actions/Makefile.am
+++ b/pixmaps/hicolor/24x24/actions/Makefile.am
@@ -1,4 +1,4 @@
 pixmapdir = $(pkgdatadir)/pixmaps/hicolor/24x24/actions
-pixmap_DATA = $(wildcard *.png)
+pixmap_DATA = $(wildcard $(srcdir)/*.png)
 
 EXTRA_DIST = $(pixmap_DATA)
