--- a/pixmaps/hicolor/16x16/actions/Makefile.am
+++ b/pixmaps/hicolor/16x16/actions/Makefile.am
@@ -1,5 +1,5 @@
 
 pixmapdir = $(pkgdatadir)/pixmaps/hicolor/16x16/actions
-pixmap_DATA = $(wildcard *.png)
+pixmap_DATA = $(wildcard $(srcdir)/*.png)
 
 EXTRA_DIST = $(pixmap_DATA)
