--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -200,7 +200,7 @@
       <applyto>/apps/::PACKAGE::/new-vm/graphics-type</applyto>
       <owner>::PACKAGE::</owner>
       <type>string</type>
-      <default>vnc</default>
+      <default>::DEFAULT_GRAPHICS::</default>
 
       <locale name="C">
         <short>Install selected graphics type for new VM</short>
