spec: Move all local config to top of file
Makes diffing between distro specs easier

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -1,14 +1,30 @@
 # -*- rpm-spec -*-
 
+%define _package @PACKAGE@
+%define _version @VERSION@
+%define _release 1
+%define virtinst_version @VIRTINST_VERSION@
+
+%define qemu_user                  ""
+%define preferred_distros          ""
+%define kvm_packages               ""
+%define libvirt_packages           ""
+%define disable_unsupported_rhel   0
+%define default_graphics           ""
+
+%define with_spice                 0
+
+# End local config
+
 # This macro is used for the continuous automated builds. It just
 # allows an extra fragment based on the timestamp to be appended
 # to the release. This distinguishes automated builds, from formal
 # Fedora RPM builds
 %define _extra_release %{?dist:%{dist}}%{!?dist:%{?extra_release:%{extra_release}}}
 
-Name: @PACKAGE@
-Version: @VERSION@
-Release: 1%{_extra_release}
+Name: %{_package}
+Version: %{_version}
+Release: %{_release}%{_extra_release}
 Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
@@ -37,7 +53,7 @@ Requires: gnome-python2-gnomekeyring >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Absolutely require this version or later
-Requires: python-virtinst >= @VIRTINST_VERSION@
+Requires: python-virtinst >= %{virtinst_version}
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
@@ -55,6 +71,9 @@ Requires: PolicyKit-authentication-agent
 %endif
 %if 0%{?fedora} >= 9 && 0%{?fedora} < 11
 Requires: PolicyKit-gnome
+%endif
+%if %{with_spice}
+Requires: spice-gtk
 %endif
 
 BuildRequires: gettext
@@ -78,7 +97,38 @@ management API.
 %setup -q
 
 %build
-%configure --without-tui
+%if %{qemu_user}
+%define _qemu_user --with-qemu_user=%{qemu_user}
+%endif
+
+%if %{kvm_packages}
+%define _kvm_packages --with-kvm-packages=%{kvm_packages}
+%endif
+
+%if %{preferred_distros}
+%define _preferred_distros --with-preferred-distros=%{preferred_distros}
+%endif
+
+%if %{libvirt_packages}
+%define _libvirt_packages --with-libvirt-package-names=%{libvirt_packages}
+%endif
+
+%if %{disable_unsupported_rhel}
+%define _disable_unsupported_rhel --disable-unsupported-rhel-options
+%endif
+
+%if %{default_graphics}
+%define _default_graphics --with-default-graphics=%{default_graphics}
+%endif
+
+
+%configure  --without-tui \
+            %{?_qemu_user} \
+            %{?_kvm_packages} \
+            %{?_libvirt_packages} \
+            %{?_preferred_distros} \
+            %{?_enable_unsupported_rhel} \
+            %{?_default_graphics}
 make %{?_smp_mflags}
 
 
