error: Simplify basic show_err call
If no error details are specified, use the traceback from the most recent
exception. We were doing this in numerous callers anyways.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -72,7 +72,10 @@ def _show_startup_error(msg, details):
     from virtManager.error import vmmErrorDialog
     err = vmmErrorDialog()
     title = _("Error starting Virtual Machine Manager")
-    err.show_err(title + ": " + msg, details, title, async=False,
+    err.show_err(title + ": " + msg,
+                 details=details,
+                 title=title,
+                 async=False,
                  debug=False)
 
 def setup_i18n():
