--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -256,7 +256,7 @@
 
       <locale name="C">
         <short>Default save domain path</short>
-        <long>Default path for saving VM snaphots</long>
+        <long>Default path for saving VM snapshots</long>
       </locale>
     </schema>
 
