--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -1,4 +1,3 @@
-# -*- python -*-
 #
 # Copyright (C) 2006 Red Hat, Inc.
 # Copyright (C) 2006 Daniel P. Berrange <berrange@redhat.com>
@@ -23,12 +22,9 @@ import os
 import os.path
 import sys
 
-import libvirt
-
+import logging
 import locale
 import gettext
-import logging
-import logging.handlers
 import traceback
 import signal
 from optparse import OptionParser, OptionValueError
@@ -132,64 +128,6 @@ def drop_stdio():
     os.open(os.devnull, os.O_RDWR)
     os.dup2(0, 1)
     os.dup2(0, 2)
-
-def setup_logging(appname, debug_stdout):
-    # Configure python logging to capture all logs we generate
-    # to $HOME/.virt-manager/${app}.log This file has
-    # proved invaluable for debugging
-    MAX_LOGSIZE   = 1024 * 1024  # 1MB
-    ROTATE_NUM    = 5
-    DIR_NAME      = ".virt-manager"
-    FILE_NAME     = "%s.log" % appname
-    FILE_MODE     = 'ae'
-    FILE_FORMAT   = ("[%(asctime)s virt-manager %(process)d] "
-                     "%(levelname)s (%(module)s:%(lineno)d) %(message)s")
-    DATEFMT       = "%a, %d %b %Y %H:%M:%S"
-
-    # set up logging
-    vm_dir = os.path.expanduser("~/%s" % DIR_NAME)
-    if not os.access(vm_dir, os.W_OK):
-        if os.path.exists(vm_dir):
-            raise RuntimeError("No write access to %s" % vm_dir)
-
-        try:
-            os.mkdir(vm_dir, 0751)
-        except IOError, e:
-            raise RuntimeError("Could not create directory %s: %s" %
-                               (vm_dir, e))
-
-    filename = "%s/%s" % (vm_dir, FILE_NAME)
-    rootLogger = logging.getLogger()
-    rootLogger.setLevel(logging.DEBUG)
-    fileHandler = logging.handlers.RotatingFileHandler(filename,
-                                    FILE_MODE, MAX_LOGSIZE, ROTATE_NUM)
-    fileHandler.setFormatter(logging.Formatter(FILE_FORMAT, DATEFMT))
-    rootLogger.addHandler(fileHandler)
-
-    if debug_stdout:
-        streamHandler = logging.StreamHandler(sys.stderr)
-        streamHandler.setLevel(logging.DEBUG)
-        streamHandler.setFormatter(logging.Formatter(
-                        "%(asctime)s (%(module)s:%(lineno)d): %(message)s"))
-        rootLogger.addHandler(streamHandler)
-
-    logging.info("%s startup" % appname)
-
-    # Register libvirt handler
-    def libvirt_callback(ctx_ignore, err):
-        if err[3] != libvirt.VIR_ERR_ERROR:
-            # Don't log libvirt errors: global error handler will do that
-            logging.warn("Non-error from libvirt: '%s'" % err[2])
-    libvirt.registerErrorHandler(f=libvirt_callback, ctx=None)
-
-    # Log uncaught exceptions
-    def exception_log(typ, val, tb):
-        if not traceback:
-            return
-        s = traceback.format_exception(typ, val, tb)
-        logging.exception("".join(s))
-        sys.__excepthook__(typ, val, tb)
-    sys.excepthook = exception_log
 
 def parse_commandline():
     optParser = OptionParser(version=appversion,
@@ -323,6 +261,8 @@ def main():
     setup_i18n()
     setup_pypath()
 
+    from virtManager import cli
+
     # Need to do this before GTK strips args like --sync
     gtk_error = None
     origargs = " ".join(sys.argv[:])
@@ -361,7 +301,7 @@ def main():
             raise RuntimeError(_("Unable to initialize GTK: %s") % gtk_error)
         raise gtk_error
 
-    setup_logging(appname, options.debug)
+    cli.setup_logging(appname, options.debug)
     global logging_setup
     logging_setup = True
 
