tui: Hook up --connect option for setting the default URI
Kind of a hack, but works for now. Allows us to pass in libvirt test:///...
URIs which making client development way way easier.

--- a/src/virt-manager-tui.py.in
+++ b/src/virt-manager-tui.py.in
@@ -135,6 +135,11 @@ def main():
                             (virtinst.__version__) +
                            "\n\n" + msg)
 
+    # Hack in the default URI for this instance of the tui
+    if options.uri:
+        import virtManagerTui.libvirtworker
+        virtManagerTui.libvirtworker.default_url = options.uri
+
     # start the app
     from virtManagerTui.mainmenu import MainMenu
     MainMenu()
