tui: Hack in an 'import' blacklist
When we start sharing code between GUI and TUI, it will be easy to have
unwanted deps on gtk and gobject to sneak into the TUI code. Add fake
modules that override the offending imports and throw an easy to trackdown
exception.

--- a/configure.ac
+++ b/configure.ac
@@ -118,6 +118,7 @@ AC_OUTPUT(Makefile
           src/Makefile
           src/virtManager/Makefile
           src/virtManagerTui/Makefile
+          src/virtManagerTui/importblacklist/Makefile
           man/Makefile
           tests/Makefile
           virt-manager.spec)
