--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -265,8 +265,7 @@ def show_engine(engine, show, uri, uuid, no_conn_auto):
         conn = engine.add_connection(uri)
 
         if conn and show:
-            import virtManager.util as util
-            util.connect_opt_out(conn, "state-changed",
+            conn.connect_opt_out("state-changed",
                                  _conn_state_changed,
                                  engine, show, uri, uuid)
 
