spec: Fix spice-gtk-python dep

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -73,7 +73,7 @@ Requires: PolicyKit-authentication-agent
 Requires: PolicyKit-gnome
 %endif
 %if %{with_spice}
-Requires: spice-gtk
+Requires: spice-gtk-python
 %endif
 
 BuildRequires: gettext
