baseclass: Make gtk/gobject dep optional
Add a new file 'guidiff' that sets up the enviroment for TUI vs GUI.

--- a/src/virt-manager-tui.py.in
+++ b/src/virt-manager-tui.py.in
@@ -136,6 +136,9 @@ def main():
                             (virtinst.__version__) +
                            "\n\n" + msg)
 
+    import virtManager.guidiff
+    virtManager.guidiff.is_gui(False)
+
     # Hack in the default URI for this instance of the tui
     if options.uri:
         import virtManagerTui.libvirtworker
